--- a/vue2/package.json
+++ b/vue2/package.json
@@ -8,16 +8,19 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "engines": {
+    "npm": ">=7.0.0"
+  },
   "dependencies": {
-    "@univerjs/core": "^0.1.0-beta.3",
-    "@univerjs/design": "^0.1.0-beta.3",
-    "@univerjs/docs": "^0.1.0-beta.3",
-    "@univerjs/engine-formula": "^0.1.0-beta.3",
-    "@univerjs/engine-render": "^0.1.0-beta.3",
-    "@univerjs/sheets": "^0.1.0-beta.3",
-    "@univerjs/sheets-formula": "^0.1.0-beta.3",
-    "@univerjs/sheets-ui": "^0.1.0-beta.3",
-    "@univerjs/ui": "^0.1.0-beta.3",
+    "@univerjs/core": "*",
+    "@univerjs/design": "*",
+    "@univerjs/docs": "*",
+    "@univerjs/engine-formula": "*",
+    "@univerjs/engine-render": "*",
+    "@univerjs/sheets": "*",
+    "@univerjs/sheets-formula": "*",
+    "@univerjs/sheets-ui": "*",
+    "@univerjs/ui": "*",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
   },
